# 2024-P1-OjaswinKohli

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
