[tool.poetry]
name = "2024-p1-ojaswinkohli"
version = "0.1.0"
description = ""
authors = ["OjaswinKohli <140537921+OjaswinKohli@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"

[tool.poetry.group.dev.dependencies]
Flask = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
